--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,7 @@
             </activation>
             <properties>
                 <showsql>true</showsql>
-                <datasource.url>jdbc:mysql://192.168.0.10:3306/activiti?characterEncoding=utf8</datasource.url>
+                <datasource.url>jdbc:mysql://192.168.0.10:3306/activiti?createDatabaseIfNotExist=true&amp;useUnicode=true&amp;characterEncoding=utf-8&amp;autoReconnect=true</datasource.url>
                 <datasource.driver>com.mysql.jdbc.Driver</datasource.driver>
                 <datasource.username>root</datasource.username>
                 <datasource.password>admin123456!@#</datasource.password>
